fix: jump books page after login #38

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,8 +23,6 @@ body a{
 body .yield-wrapper {
   background: asset-url('back_book.jpg') no-repeat fixed left bottom;
   background-size: cover;
-  padding-right: 10px;
-  padding-left: 10px;
 
   min-height: 85.6vh;
 }
